# editor

./: .gitignore  CMakeLists.txt  LICENSE  colors.json  colors.sublime.json  config.yml  default.theme.yml  main.cpp  readme.md  setup_deps.sh
.github/workflows/: cmake.yml
Assets/CMake/: GoatEdit.icns  Info.plist.in  com.gnilk.goatedit.desktop
Assets/Graphics/: convert.sh
Assets/Resources/: bootstrap.script  colors.json  config.yml  default.theme.yml
Assets/Resources/Linux/: default_keymap.yml  quickmode_keymap.yml  workspace_keymap.yml
Assets/Resources/macOS/: default_keymap.yml  workspace_keymap.yml
src/Core/: Action.cpp  Action.h  ActionHelper.cpp  ActionHelper.h  AnsiParser.cpp  AnsiParser.h  AssetLoaderBase.cpp  AssetLoaderBase.h  Buffer.cpp  Buffer.h  BufferManager.cpp  BufferManager.h  ClipBoard.cpp  ClipBoard.h  ColorRGBA.cpp  ColorRGBA.h  CommandMode.cpp  CommandMode.h  CommandView.cpp  CommandView.h  CompileTimeConfig.h  ConvertUTF.cpp  ConvertUTF.h  Cursor.h  DrawContext.cpp  DrawContext.h  DurationTimer.cpp  DurationTimer.h  Editor.cpp  Editor.h  EditorConfig.h  EditorMode.cpp  EditorMode.h  EditorModel.cpp  EditorModel.h  EditorView.cpp  EditorView.h  FolderMonitor.cpp  FolderMonitor.h  FolderMonitorBase.cpp  (+73 more)
src/Core/API/: DocumentAPI.cpp  DocumentAPI.h  EditorAPI.cpp  EditorAPI.h  NamedColorsAPI.cpp  NamedColorsAPI.h  TextBufferAPI.cpp  TextBufferAPI.h  ThemeAPI.cpp  ThemeAPI.h  ViewAPI.cpp  ViewAPI.h
src/Core/Config/: ColorConfig.cpp  ColorConfig.h  Config.cpp  Config.h  ConfigNode.cpp  ConfigNode.h  NamedColor.cpp  NamedColorConfig.cpp  NamedColorConfig.h  YAMLMerge.cpp  YAMLMerge.h
src/Core/Controllers/: BaseController.cpp  BaseController.h  CommandController.cpp  CommandController.h  EditController.cpp  EditController.h  QuickCommandController.cpp  QuickCommandController.h  TerminalController.cpp  TerminalController.h
src/Core/JSEngine/: JSPluginCommand.cpp  JSPluginCommand.h  JSPluginEngine.cpp  JSPluginEngine.h  JSWrapper.cpp  JSWrapper.h
src/Core/JSEngine/Modules/: ConsoleAPIWrapper.cpp  ConsoleAPIWrapper.h  DocumentAPIWrapper.cpp  DocumentAPIWrapper.h  EditorAPIWrapper.cpp  EditorAPIWrapper.h  NamedColorsAPIWrapper.cpp  NamedColorsAPIWrapper.h  TextBufferAPIWrapper.cpp  TextBufferAPIWrapper.h  ThemeAPIWrapper.cpp  ThemeAPIWrapper.h  ViewAPIWrapper.cpp  ViewAPIWrapper.h
src/Core/Language/: LangLineTokenizer.cpp  LangLineTokenizer.h  LangToken.cpp  LangToken.h  LanguageBase.cpp  LanguageBase.h  LanguageTokenClass.h
src/Core/Language/CPP/: CPPLanguage.cpp  CPPLanguage.h  JSONLanguage.cpp  JSONLanguage.h
src/Core/Language/LanguageSupport/: CPPLanguage.cpp  CPPLanguage.h  DefaultLanguage.cpp  DefaultLanguage.h  JSONLanguage.cpp  JSONLanguage.h  MakeBuildLang.cpp  MakeBuildLang.h
src/Core/Linux/: LinuxFolderMonitor.cpp  LinuxFolderMonitor.h
src/Core/NCurses/: NCursesColorRepository.cpp  NCursesColorRepository.h  NCursesCursor.h  NCursesDrawContext.cpp  NCursesDrawContext.h  NCursesKeyboardDriver.cpp  NCursesKeyboardDriver.h  NCursesScreen.cpp  NCursesScreen.h  NCursesTranslate.cpp  NCursesTranslate.h  NCursesWindow.cpp  NCursesWindow.h
src/Core/Plugins/: PluginCommand.cpp  PluginCommand.h  PluginExecutor.cpp  PluginExecutor.h
src/Core/SDL2/: SDLColor.h  SDLColorRepository.h  SDLCursor.h  SDLDrawContext.cpp  SDLDrawContext.h  SDLFontManager.cpp  SDLFontManager.h  SDLKeyboardDriver.cpp  SDLKeyboardDriver.h  SDLScreen.cpp  SDLScreen.h  SDLTranslate.cpp  SDLWindow.cpp  SDLWindow.h
src/Core/SDL2/ext/: stbttf.h
src/Core/SDL3/: SDLColor.h  SDLColorRepository.cpp  SDLColorRepository.h  SDLDrawContext.cpp  SDLDrawContext.h  SDLKeyboardDriver.cpp  SDLKeyboardDriver.h  SDLScreen.cpp  SDLScreen.h  SDLTranslate.h  SDLWindow.cpp  SDLWindow.h
src/Core/SDL3/ext/: stbttf.h
src/Core/Sublime/: SublimeConfigColorScript.cpp  SublimeConfigColorScript.h  SublimeConfigScriptEngine.cpp  SublimeConfigScriptEngine.h
src/Core/Tests/: test_dcoverlay.cpp
src/Core/Theme/: Theme.cpp  Theme.h
src/Core/Views/: CommandView.cpp  CommandView.h  EditorHeaderView.h  EditorView.cpp  EditorView.h  GutterView.cpp  GutterView.h  HSplitView.cpp  HSplitView.h  HSplitViewStatus.cpp  HSplitViewStatus.h  HStackView.h  HeaderView.cpp  HeaderView.h  ListSelectionModal.cpp  ListSelectionModal.h  ModalView.cpp  ModalView.h  RootView.cpp  RootView.h  SingleLineView.h  StackableView.h  TerminalView.cpp  TerminalView.h  TestView.cpp  TestView.h  TreeSelectionModal.cpp  TreeSelectionModal.h  TreeView.h  VSplitView.cpp  VSplitView.h  VStackView.h  ViewBase.cpp  ViewBase.h  ViewLayout.cpp  ViewLayout.h  VisibleView.cpp  VisibleView.h  WorkspaceView.cpp  WorkspaceView.h
src/Core/macOS/: MacOSFolderMonitor.cpp  MacOSFolderMonitor.h  MacOSKeyboardMonitor.cpp  MacOSKeyboardMonitor.h
src/Core/unix/: Shell.cpp  Shell.h  ShellCommand.cpp  ShellCommand.h
src/Plugins/: jsplugs.yml
src/Plugins/Scripts/: closeactive.js  exiteditor.js  hello.js  help.js  hideview.js  isviewvisible.js  listbuffers.js  listlanguages.js  listthemecolors.js  listviews.js  loadbuffer.js  newbuffer.js  savebuffer.js  setlanguage.js  showview.js  testcmd.js  themereload.js
src/ext/duktape-2.7.0/extras/module-node/: README.rst
src/ext/duktape-2.7.0/src/: duk_config.h
tests/: cgeventsniff.cpp  colors.sublime.json  config.yml  focus_oc.h  focus_oc_wrapper.hpp  focus_oc_wrapper.mm  focusdet.cpp  gckeys.m  kbdhooking.m  kbdmon.cpp  myshell.cpp  myshell2.cpp  nseventmon.m  strsttr.cpp  testlayout.cpp  testscroll.cpp  tstlog.cpp  viewrender.cpp
utests/: test_ansiparser.cpp  test_assetloader.cpp  test_buffermanager.cpp  test_clipboard.cpp  test_config.cpp  test_cpplang.cpp  test_editorapi.cpp  test_edtmodel.cpp  test_jsengine.cpp  test_jswrapper.cpp  test_keymapping.cpp  test_logger.cpp  test_main.cpp  test_strutil.cpp  test_textbuffer.cpp  test_theme.cpp  test_timer.cpp  test_unicode.cpp  test_vnav.cpp  test_vtermparser.cpp  test_winlocation.cpp  test_workspace.cpp  test_xgdenv.cpp
